<resources>
    <string name="app_name">Prueba_BBDD</string>
    <string name="c_digo_del_producto">Código del Producto</string>
    <string name="precio_del_producto">Precio del Producto</string>
    <string name="descripci_n">Descripción</string>
    <string name="eliminar">Eliminar</string>
    <string name="registrar">Registrar</string>
    <string name="buscar">Buscar</string>
    <string name="modificar">Modificar</string>
</resources>