<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_codigo"
        android:layout_width="238dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/c_digo_del_producto"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="236dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/precio_del_producto"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_codigo"
        app:layout_constraintVertical_bias="0.014" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="359dp"
        android:layout_height="144dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripci_n"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/Eliminar"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Modificar"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/Registrar"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#F44336"
        android:onClick="registrar"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

    <Button
        android:id="@+id/Buscar"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FFC107"
        android:onClick="Buscar"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registrar" />

    <Button
        android:id="@+id/Modificar"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#2196F3"
        android:onClick="modificar"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Buscar" />

</androidx.constraintlayout.widget.ConstraintLayout>